force-app/main/default/objects/Excise_Tax_Receipt_Line__c/Excise_Tax_Receipt_Line__c.object-meta.xml
<CustomObject>
    <label>Excise Tax Receipt Line</label>
    <nameField>
        <displayFormat>ETRL-{0000000000}</displayFormat>
        <label>ETR Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Excise Tax Receipt Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>