force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Apply_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Apply_Excise_Tax__c</fullName>
    <formula>TEXT(Product_Name__r.Apply_Excise_Tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Excise Tax</label>
    <type>Text</type>
</CustomField>