force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/ETRLine_Status__c.field-meta.xml
<CustomField>
    <fullName>ETRLine_Status__c</fullName>
    <inlineHelpText>Status</inlineHelpText>
    <label>ETRLine Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>