force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Excise_Tax_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Excise_Tax_Receipt__c</fullName>
    <label>Excise Tax Receipt</label>
    <referenceTo>Excise_Tax_Receipt__c</referenceTo>
    <relationshipLabel>Excise Tax Receipt Lines</relationshipLabel>
    <relationshipName>Excise_Tax_Receipt_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>