force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>Invoice_Line__c</referenceTo>
    <relationshipLabel>Excise Tax Receipt Lines</relationshipLabel>
    <relationshipName>Excise_Tax_Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>