force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Line_Total_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Excise_Tax__c</fullName>
    <formula>Qty_Received__c *  Unit_Excise_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Excise Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>