force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <formula>If( Invoice_Line__c &lt;&gt; &apos;&apos; , Invoice_Line__r.MOQ__c ,Retail_Shipping_Manifest_Line__r.MOQ__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>