force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name__c</fullName>
    <formula>Product_Name__r.Producer_Name__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer Name</label>
    <type>Text</type>
</CustomField>