force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Qty_Received__c.field-meta.xml
<CustomField>
    <fullName>Qty_Received__c</fullName>
    <label>Qty Received</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>