force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Quantity_Cases__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Cases__c</fullName>
    <formula>if( Invoice_Line__c &lt;&gt; &apos;&apos;, Invoice_Line__r.Quantity_Cases__c , Retail_Shipping_Manifest_Line__r.Quantity_Cases__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity or Cases</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>