force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Retail_Shipping_Manifest_Line__c.field-meta.xml
<CustomField>
    <fullName>Retail_Shipping_Manifest_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Shipping Manifest Line</label>
    <referenceTo>Shipping_Manifest_Line__c</referenceTo>
    <relationshipLabel>Excise Tax Receipt Lines</relationshipLabel>
    <relationshipName>Excise_Tax_Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>