force-app/main/default/objects/Excise_Tax_Receipt_Line__c/fields/Unit_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Excise_Tax__c</fullName>
    <formula>Retail_Wholesale_Price__c * (1.6) * (0.15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Excise Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>